--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RW TIPS - Análise H2H</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
@@ -44,7 +45,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Oxanium', sans-serif;
             background: radial-gradient(circle at top right, #1a1a2e, #0f0f13);
             color: var(--text-primary);
             margin: 0;
@@ -134,7 +135,7 @@
             background-clip: text;
             color: transparent;
             margin: 10px 0;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Oxanium', sans-serif;
             letter-spacing: 2px;
             text-shadow: 0 0 10px rgba(0, 255, 136, 0.3);
         }
