--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
         .btn-login {
             width: 100%;
-            padding: 10px;
+            padding: 10px 24px;
             background: linear-gradient(135deg, #10b981, #059669);
             border: none;
             border-radius: 8px;
