--- a/index.html
+++ b/index.html
@@ -1464,6 +1464,14 @@
             if (e.key === 'Enter') loginBtn.click();
         });
 
+        // Conversão de horário: interpreta 'scheduled_time_brt' como BRT (UTC-03:00)
+        function parseBrtToLocal(brtString) {
+            if (!brtString) return null;
+            const iso = String(brtString).replace(' ', 'T');
+            // Offset fixo -03:00; se houver horário de verão, podemos trocar por cálculo dinâmico
+            return new Date(`${iso}-03:00`);
+        }
+
         // NOVA LÓGICA DE CAPTURA DE DADOS (CORRIGIDA)
         async function loadGames() {
             const loadingGames = document.getElementById('loadingGames');
@@ -1481,8 +1489,8 @@
                 const sortedLimited = rawMatches
                     .filter(m => !!m.scheduled_time_brt)
                     .sort((a, b) => {
-                        const dateA = new Date(String(a.scheduled_time_brt).replace(' ', 'T'));
-                        const dateB = new Date(String(b.scheduled_time_brt).replace(' ', 'T'));
+                        const dateA = parseBrtToLocal(a.scheduled_time_brt);
+                        const dateB = parseBrtToLocal(b.scheduled_time_brt);
                         return dateA.getTime() - dateB.getTime();
                     })
                     .slice(0, 20);
@@ -1504,7 +1512,7 @@
                         processedGame.premiumFT = isPremiumMatchFT(processedGame);
                         processedGame.premiumHT = isPremiumMatchHT(processedGame);
 
-                        const startDate = new Date(String(item.scheduled_time_brt).replace(' ', 'T'));
+                        const startDate = parseBrtToLocal(item.scheduled_time_brt);
                         processedGame.day = startDate.toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit' });
                         processedGame.hour = startDate.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
